@@ -1,10 +1,11 @@
-﻿PbootCMS V1.2.0 build 2018-08-30
+﻿PbootCMS V1.2.0 build 2018-08-31
 1、系统优化及安全修复；
 2、修复API搜索与页面实现不统一；
 3、优化后台内容页栏目显示逻辑；
 4、新增后台轮播、链接页面批量排序；
 5、升级layui到最新版本；
 6、新增列表标签isico、ispics、istop、isrecommend、isheadline调节参数；
+7、新增面包屑连接符separatoriconc及indexicon参数设置字体图标class；
 
 PbootCMS V1.1.9 build 2018-08-17
 1、系统优化及安全修复(重要)；
